# tokenizer-visualizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py
src/tokenizer/: manager.py  repository.py  utils.py
src/ui/: components.py
src/ui/modes/: chat.py  jsonl.py  single.py
src/utils/: jsonl_parser.py
tests/: conftest.py  test_data.jsonl  test_tokenization_cases.py
